; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/rpcrt4/extr_ndr_ole.c_get_ip_iid.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/rpcrt4/extr_ndr_ole.c_get_ip_iid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i64 }

@IID_IUnknown = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [18 x i8] c"format=%02x %02x\0A\00", align 1
@FC_IP = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [11 x i8] c"format=%d\0A\00", align 1
@FC_CONSTANT_IID = common dso_local global i64 0, align 8
@.str.2 = private unnamed_addr constant [8 x i8] c"got %s\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (%struct.TYPE_4__*, i8*, i64*)* @get_ip_iid to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @get_ip_iid(%struct.TYPE_4__* %0, i8* %1, i64* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca %struct.TYPE_4__*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64*, align 8
  %8 = alloca i32*, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %5, align 8
  store i8* %1, i8** %6, align 8
  store i64* %2, i64** %7, align 8
  %9 = load i64*, i64** %7, align 8
  %10 = icmp ne i64* %9, null
  br i1 %10, label %12, label %11

11:                                               ; preds = %3
  store i32* @IID_IUnknown, i32** %4, align 8
  br label %60

12:                                               ; preds = %3
  %13 = load i64*, i64** %7, align 8
  %14 = getelementptr inbounds i64, i64* %13, i64 0
  %15 = load i64, i64* %14, align 8
  %16 = load i64*, i64** %7, align 8
  %17 = getelementptr inbounds i64, i64* %16, i64 1
  %18 = load i64, i64* %17, align 8
  %19 = call i32 (i8*, i64, ...) @TRACE(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0), i64 %15, i64 %18)
  %20 = load i64*, i64** %7, align 8
  %21 = getelementptr inbounds i64, i64* %20, i64 0
  %22 = load i64, i64* %21, align 8
  %23 = load i64, i64* @FC_IP, align 8
  %24 = icmp ne i64 %22, %23
  br i1 %24, label %25, label %30

25:                                               ; preds = %12
  %26 = load i64*, i64** %7, align 8
  %27 = getelementptr inbounds i64, i64* %26, i64 0
  %28 = load i64, i64* %27, align 8
  %29 = call i32 @FIXME(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.1, i64 0, i64 0), i64 %28)
  br label %30

30:                                               ; preds = %25, %12
  %31 = load i64*, i64** %7, align 8
  %32 = getelementptr inbounds i64, i64* %31, i64 1
  %33 = load i64, i64* %32, align 8
  %34 = load i64, i64* @FC_CONSTANT_IID, align 8
  %35 = icmp eq i64 %33, %34
  br i1 %35, label %36, label %40

36:                                               ; preds = %30
  %37 = load i64*, i64** %7, align 8
  %38 = getelementptr inbounds i64, i64* %37, i64 2
  %39 = bitcast i64* %38 to i32*
  store i32* %39, i32** %8, align 8
  br label %50

40:                                               ; preds = %30
  %41 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %42 = load i8*, i8** %6, align 8
  %43 = load i64*, i64** %7, align 8
  %44 = getelementptr inbounds i64, i64* %43, i64 2
  %45 = call i32 @ComputeConformance(%struct.TYPE_4__* %41, i8* %42, i64* %44, i32 0)
  %46 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %47 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %46, i32 0, i32 0
  %48 = load i64, i64* %47, align 8
  %49 = inttoptr i64 %48 to i32*
  store i32* %49, i32** %8, align 8
  br label %50

50:                                               ; preds = %40, %36
  %51 = load i32*, i32** %8, align 8
  %52 = icmp ne i32* %51, null
  br i1 %52, label %54, label %53

53:                                               ; preds = %50
  store i32* @IID_IUnknown, i32** %8, align 8
  br label %54

54:                                               ; preds = %53, %50
  %55 = load i32*, i32** %8, align 8
  %56 = call i32 @debugstr_guid(i32* %55)
  %57 = sext i32 %56 to i64
  %58 = call i32 (i8*, i64, ...) @TRACE(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.2, i64 0, i64 0), i64 %57)
  %59 = load i32*, i32** %8, align 8
  store i32* %59, i32** %4, align 8
  br label %60

60:                                               ; preds = %54, %11
  %61 = load i32*, i32** %4, align 8
  ret i32* %61
}

declare dso_local i32 @TRACE(i8*, i64, ...) #1

declare dso_local i32 @FIXME(i8*, i64) #1

declare dso_local i32 @ComputeConformance(%struct.TYPE_4__*, i8*, i64*, i32) #1

declare dso_local i32 @debugstr_guid(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
